# animated_pystyle

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish-pypi.yml
animated_pystyle/: __init__.py  core.py
